--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prod:abs": "set MODE_ABS=true rm -rf src/assets/dist && webpack --mode production --progress"
   },
   "author": "Radonirina Maminiaina",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
