--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "bugs": {
     "url": "https://github.com/radonirinamaminiaina/webpack-front-end/issues"
   },
-  "homepage": "https://github.com/radonirinamaminiaina/webpack-front-end#readme"
+  "homepage": "https://github.com/radonirinamaminiaina/webpack-front-end#readme",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "commander": "^2.15.1",
+    "fs-extra": "^6.0.1"
+  }
 }
