--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "generator\""
   ],
   "bin": {
-    "fg": "./main.js"
+    "fo": "./main.js"
   },
   "author": "Radonirina Maminiaina <radonirina.maminiaina@gmail.com>",
   "license": "MIT",
