--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
+    "figlet": "^1.2.0",
     "fs-extra": "^6.0.1"
   }
 }
