--- a/templates/package.json
+++ b/templates/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --hot",
+    "start": "front serve",
     "dev": "npm start",
     "prod:rel": "rm -rf src/assets/dist && webpack --mode production --progress",
     "prod:abs": "set MODE_ABS=true rm -rf src/assets/dist && webpack --mode production --progress"
