--- a/templates/package.json
+++ b/templates/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "front serve",
     "dev": "npm start",
-    "prod:rel": "front build",
+    "prod": "front build",
     "prod:abs": "front build --absolute"
   },
   "author": "Radonirina Maminiaina",
