--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-cli",
+  "name": "front-cli-webpack",
   "version": "1.0.0",
   "description": "webpack config for front-end developer",
   "main": "main.js",
