--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bin": {
     "fo": "./main.js"
   },
-  "author": "Radonirina Maminiaina <rado93devweb@gmail.com>",
+  "author": "Radonirina Maminiaina <radonirina.maminiaina@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/radonirinamaminiaina/webpack-front-end/issues"
