--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "front-cli-webpack",
+  "name": "wfo",
   "version": "1.0.0",
-  "description": "webpack config for front-end developer",
+  "description": "front-end cli generator",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
