--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wfo-cli",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "description": "front-end cli generator",
   "main": "main.js",
   "scripts": {
@@ -31,9 +31,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "figlet": "^1.2.0",
-    "fs-extra": "^6.0.1"
-  },
-  "devDependencies": {
+    "fs-extra": "^6.0.1",
     "json-format": "^1.0.1"
   }
 }
